@@ -38,8 +38,8 @@ group = "de.tum.in.www1.artemis"
 version = "4.4.6"
 description = "Interactive Learning with Individual Feedback"
 
-sourceCompatibility=15
-targetCompatibility=15
+sourceCompatibility=14
+targetCompatibility=14
 
 apply plugin: "com.github.ben-manes.versions"
 
@@ -91,9 +91,6 @@ springBoot {
     mainClassName = "de.tum.in.www1.artemis.ArtemisApp"
 }
 
-tasks.withType(JavaCompile).each {
-    it.options.compilerArgs.add('--enable-preview')
-}
 
 // Execute the test cases: ./gradlew executeTests
 
